[package]
name = "tck_no"
description = "Turkish Citizenship ID Validator and Generator Library for Rust"
readme = "README.md"
authors = ["Baris Ceviz (@PeaceCwz) <baris@ceviz.dev>"]
repository = "https://github.com/peacecwz/tck_no/"
version = "1.0.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE.md"
keywords = ["turkish", "citizenship", "identity", "tckn"]
categories = ["value-formatting"]

[dependencies]
rand = "0.8.4"